<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KeyStore App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="clear_keystore">Clear keystore</string>
    <string name="delete_keystore">Delete keystore</string>
    <string name="generate_keypair">Generate keypair</string>
    <string name="show_store">Show store</string>
    <string name="title_activity_pass">Enter Password</string>
    <string name="unlock">Unlock</string>
    <string name="set_password">Set password</string>
    <string name="header">Keys stored in store:</string>
    <string name="chooser_label">Select file to sign</string>
    <string name="select_file">Select file</string>
    <string name="key_details">Key details</string>
    <string name="sign">Sign</string>
    <string name="verify">Verify</string>
    <string name="delete">Delete</string>
    <string name="title_activity_s">Settings</string>
    <string name="key_size">Preferred key size</string>
    <string name="pref_algorithm">Preferred signing algorithm</string>
    <string name="pref_security_provider">Preferred security provider</string>
    <string name="pref_hash">Preferred hash function</string>
    <string name="reset_password">Reset application</string>
    <string name="repeat_password">Repeat password</string>
    <string name="new_password">New password</string>
    <string name="sign_large">Sign large file</string>
    <string name="verify_large">Verify large file</string>
    <string name="certificate_details">Certificate details</string>
    <string name="settings">Settings</string>
    <string name="main_label">Items in the store</string>
    <string name="import_file">Import key or cert</string>
    <string name="import_key">Import private key</string>
    <string name="export">Export as pem file</string>
    <string name="help">Help</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="common_name">Common name</string>
    <string name="organization">Organization</string>
    <string name="organization_unit">Organization unit</string>
    <string name="set_issuer">Export store</string>
    <string name="issuer_settings">Issuer settings</string>
    <string name="password">Enter password</string>
    <string name="title_activity_fragment_test">FragmentTestActivity</string>
    <string name="add">Add</string>
    <string name="import_store">Import PKCS12 bundle</string>
    <string name="export_certificate">Export certificate (PEM)</string>
    <string name="export_key">Export key (PKCS8)</string>
    <string name="export_both">Export both (PKCS12)</string>
    <string name="cryptography_pref">Cryptography settings</string>


</resources>
